# gradio-ollama-sample

./: .gitignore  README.md  app.py  chat_utils.py  config.py  model_utils.py  pyproject.toml  requirements.txt
static/: script.js
